--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/04ce61957a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("1BKULdIcNgVbiGNNR");
+        })();
+    </script>
     <title>Sharj Ahmed Resume</title>
 </head>
+
 <body>
     <header>
         <div class="row no-gutters">
@@ -61,10 +71,12 @@
                 <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
                 <h5 class="uppercase text-center">Let's work together!</h5>
                 <div class="center-form">
-                    <form>
+                    <form onsubmit="return sendMail(this);">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
-                        <input type="text" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
-                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
+                        <input type="text" name="email" id="emailaddress" class="form-control" placeholder="Email"
+                            required>
+                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control"
+                            placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary">Send project request</button>
@@ -99,10 +111,10 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                            <a target="_blank" href="#">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <span class="sr-only">Facebook</span>
-                            </a>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
@@ -138,5 +150,7 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/send-email.js"></script>
 </body>
+
 </html>
